variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: not found: value reculer
reculer(x) 
^